[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code_gift_box_wrapper"
version = "0.0.1"
authors = [
  { name="Marcin Kraszewski", email="marcin.kraszewski@gds.ey.com" },
]
description = "Unite cloned code across microservices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""